# evalforgeRust

./: .env.example  .gitignore  Cargo.toml  README.md
examples/: ask_claude.py  ask_model.py
src/: grader.rs  json.rs  main.rs  provider.rs  report.rs  runner.rs  task.rs
tasks/: sample.eval
